# hex-processor

./: .buildinfo  .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Hex.hpp  Instructions.hpp  LICENSE  README.md  TODO.md  Util.hpp  asm.cpp  asm.hpp  cmp.cpp  compiler.cpp  genindex.html  hex.cpp  hex.hpp  hexasm.cpp  hexasm.hpp  hexcontainer.hpp  hexdis.cpp  hexsim.cpp  hexsim.hpp  hexsimio.hpp  hextb.cpp  index.html  main.cpp  objects.inv  processor.v  search.html  searchindex.js  sim.cpp  synth.in.ys  util.hpp  xcmp.cpp  xcmp.hpp  xhexb.S  (+2 more)
.doctrees/: environment.pickle  index.doctree
.github/workflows/: build-and-test.yml
_sources/: index.rst.txt
cmake/: FindSphinx.cmake
docs/: CMakeLists.txt  conf.py  index.rst  requirements.txt  sim.c
docs/architecture/: channels.rst  execution.rst  instruction-encoding.rst  instruction-set.rst  overview.rst  registers.rst  simulator-model.rst  syscalls.rst
docs/compiler/: bootstrapping.rst  codebuffer.rst  codegen-idioms.rst  lexical-analyser.rst  memory-and-calling.rst  networks.rst  overview.rst  syntax-analyser.rst  translator.rst
docs/hardware/: core.rst  memory-and-links.rst  network.rst  overview.rst  testbench.rst
docs/language/: concurrency.rst  examples.rst  expressions.rst  grammar.rst  lexical.rst  overview.rst  procedures-functions.rst  program-structure.rst  statements.rst
docs/reference/: further-reading.rst  index.rst  instruction-quick-ref.rst  primary-sources.rst  syscall-reference.rst
docs/tools/: building.rst  formats.rst  index.rst  testing.rst
examples/: bubblesort.x  buffer.x  div.x  echo_char.x  exit.x  globals.x  hello_prints.x  horner.x  mergesort.x  reduce.x  reverse.x  ring.x  scan.x  sieve.x  strlen.x  xhexb.x
rtl/: core.sv  network_top.sv  processor.sv
src/: hex.cpp  hex.hpp  hexasm.hpp  hexcontainer.hpp  hexdis.hpp  heximage.hpp  hexsim.hpp  hexsimio.hpp  lexer.hpp  util.hpp  xcmp.hpp
synth/: CMakeLists.txt  processor.v  synth.in.ys
tests/: CMakeLists.txt  definitions.py.in  empty.x  exit.S  fact3.x  globals.x  hello.S  hello_procedure.S  test.S  test.x  tests.py
tests/asm/: exit0.S  exit255.S  hello.S
tests/rtl/: core_tb.cpp  flit_layout.hpp  liu_tb.cpp  router_tb.cpp
tests/unit/: AssemblerProgramTests.cpp  AssemblerTests.cpp  CMakeLists.txt  DisassemblerTests.cpp  SimTests.cpp  TestContext.hpp  XLanguageTests.cpp  XProgramTests.cpp  asm_features.cpp  asm_programs.cpp  asm_tests.cpp  definitions.hpp.in  dis_features.cpp  hexasm.cpp  main.cpp  x_features.cpp  x_programs.cpp  x_tests.cpp
tests/x/: ackermann.x  binsearch.x  bubblesort.x  collatz.x  div.x  echo_char.x  exp2.x  fac.x  fact3.x  farm.x  fib.x  foo.x  gcd.x  globals.x  hanoi.x  hello.x  hello_prints.x  hello_putval.x  mul.x  mul2.x  pingpong.x  pipe.x  primes.x  printhex.x  printn.x  prints.x  stencil.x  strlen.x
tools/: hextb.cpp  xrun.cpp
verilog/: CMakeLists.txt  hex.sv  hex_pkg.sv  hextb.cpp  hextb.sv  link_interface.sv  memory.sv  processor.sv  processor.v  router.sv  sim_main.cpp
